test/files/neg/t2442.check
t2442.scala:4: error: match may not be exhaustive.
It would fail on the following input: THREE
  def f(e: MyEnum) = e match {
                     ^
one error found
